# Synchronization-of-multiple-streams

./: CMakeLists.txt  README.md
include/: DataEvent.h  Device.h  DeviceA.h  DeviceB.h  DeviceEvent.h  Event.h  EventQueue.h  StartedEvent.h  WorkDoneEvent.h
src/parallel_executor/: DataEvent.cpp  DeviceA.cpp  DeviceB.cpp  DeviceEvent.cpp  EventQueue.cpp  StartedEvent.cpp  WorkDoneEvent.cpp  main.cpp
